<resources>
    <string name="app_name">CodeBlocks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="order">Order:</string>
    <string name="deadline">Deadline</string>
    <string name="date_created">Date created</string>
    <string name="sort_by">Sort by:</string>
    <string name="sort_tasks">Sort Tasks</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="job_title">Job Title</string>
    <string name="email">Email</string>
    <string name="github_personal_website">GitHub/Personal Website</string>
    <string name="personal_message">Personal Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="change_picture">Change Picture</string>
    <string name="short_description">Short Description</string>
    <string name="invite_user">Invite User</string>
    <string name="rank">Rank:</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment</string>
    <string name="done">Done</string>
    <string name="assign_to">Assign to:</string>
    <string name="priority">Priority:</string>
    <string name="categories">Categories:</string>
    <string name="create_new_category">Create New Category</string>
    <string name="press_to_select_categories">Press to Select Categories:</string>
    <string name="select_categories">Select Categories</string>
    <string name="create_task">Create Task</string>
    <string name="priority2">Priority</string>

    <!-- For filtering purposes -->
    <string name="filter_tasks">Filter Tasks</string>
    <string name="filter_assignee_anyone">Anyone</string>
    <string name="filter_assignee_me">Me</string>
    <string name="filter_deadline_all_deadlines">All Deadlines</string>
    <string name="filter_deadline_less_than_1_day_left">Less than 1 day left</string>
    <string name="filter_deadline_less_than_1_week_left">Less than 1 week left</string>
    <string name="filter_deadline_less_than_1_month_left">Less than 1 month left</string>

    <string-array name="rank">
        <item>ADMIN</item>
        <item>MEMBER</item>
    </string-array>

    <string-array name="priority">
        <item>NONE</item>
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
</resources>
