<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorBlack"
        android:text="@string/filter_tasks"
        style="@style/SortFilterTextView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assignees:"
        style="@style/SortFilterTextView"
        />

    <RadioGroup
        android:id="@+id/radioGroup_filter_assignees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButton_filter_assignees_anyone"
        style="@style/SortFilterRadioGroup"
        >

        <RadioButton
            android:id="@+id/radioButton_filter_assignees_anyone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_assignee_anyone"
            style="@style/SortFilterRadioButton"
            />

        <RadioButton
            android:id="@+id/radioButton_filter_assignees_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_assignee_me"
            style="@style/SortFilterRadioButton"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categories:"
        style="@style/SortFilterTextView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deadline:"
        style="@style/SortFilterTextView"
        />

    <RadioGroup
        android:id="@+id/radioGroup_filter_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButton_filter_deadline_all_deadlines"
        style="@style/SortFilterRadioGroup"
        >

        <RadioButton
            android:id="@+id/radioButton_filter_deadline_all_deadlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SortFilterRadioButton"
            android:text="@string/filter_deadline_all_deadlines"
            />

        <RadioButton
            android:id="@+id/radioButton_filter_deadline_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SortFilterRadioButton"
            android:text="@string/filter_deadline_less_than_1_day_left"
            />

        <RadioButton
            android:id="@+id/radioButton_filter_deadline_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SortFilterRadioButton"
            android:text="@string/filter_deadline_less_than_1_week_left"
            />

        <RadioButton
            android:id="@+id/radioButton_filter_deadline_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SortFilterRadioButton"
            android:text="@string/filter_deadline_less_than_1_month_left"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_filter_task_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/SortFilterButton"
            />

        <Button
            android:id="@+id/button_filter_task_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/SortFilterButton"
            />

    </LinearLayout>

</LinearLayout>