<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="false"
    android:fillViewport="false"
    tools:context=".homePage.userProfile.fragment.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="48dp"
        android:layout_marginHorizontal="60dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_circle_blue_108dp"
            />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/username"
            />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location_city_blue"
            android:text="@string/location"
            style="@style/UserProfileCompoundDrawable"
            />

        <TextView
            android:id="@+id/textView_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_business_blue"
            android:text="@string/company"
            style="@style/UserProfileCompoundDrawable"
            />

        <TextView
            android:id="@+id/textView_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_work_blue"
            android:text="@string/job_title"
            style="@style/UserProfileCompoundDrawable"
            />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_blue"
            android:text="@string/email"
            style="@style/UserProfileCompoundDrawable"
            />

        <TextView
            android:id="@+id/textView_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_web_blue"
            android:text="@string/github_personal_website"
            style="@style/UserProfileCompoundDrawable"
            />

        <TextView
            android:id="@+id/textView_personal_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_message_blue"
            android:text="@string/personal_message"
            style="@style/UserProfileCompoundDrawable"
            />

        <Button
            android:id="@+id/button_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/edit_profile"
            style="@style/CreateButton"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>