<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_member"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Invite User"
            style="@style/DialogHeader"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_member_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout"
            style="@style/TextInputLayoutStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_member_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:maxLines="1"
                android:hint="@string/username"
                style="@style/TextInputEditTextCreate"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/rank"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dialog_member_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            />

        <Button
            android:id="@+id/dialog_member_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="28dp"
            android:text="@string/invite_user"
            style="@style/DialogButton"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>