<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projectPage.tasks.activity.EditTaskCategoriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_task_description"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout"
                style="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_task_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:hint="@string/create_new_category"
                    style="@style/TextInputEditTextCreate"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_create_task_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:text="Create"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            android:text="@string/press_to_select_categories"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_selected_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/button_task_category_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/done"
            style="@style/CreateButton"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>